; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/extr_aha1740.c_aha1740_test_port.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/extr_aha1740.c_aha1740_test_port.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PORTADDR_ENH = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [68 x i8] c"aha174x: Board detected, but not in enhanced mode, so disabled it.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @aha1740_test_port to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @aha1740_test_port(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = call i32 @PORTADR(i32 %4)
  %6 = call i32 @inb(i32 %5)
  %7 = load i32, i32* @PORTADDR_ENH, align 4
  %8 = and i32 %6, %7
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  store i32 1, i32* %2, align 4
  br label %13

11:                                               ; preds = %1
  %12 = call i32 @printk(i8* getelementptr inbounds ([68 x i8], [68 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %2, align 4
  br label %13

13:                                               ; preds = %11, %10
  %14 = load i32, i32* %2, align 4
  ret i32 %14
}

declare dso_local i32 @inb(i32) #1

declare dso_local i32 @PORTADR(i32) #1

declare dso_local i32 @printk(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
